--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,6 +4,8 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
+    "strict": false,
   },
   "include": ["vite.config.ts"]
+  
 }
