--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,41 +1,20 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-name: 'vite CI'
+name: 'Deploy to github pages'
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
-  
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    permissions:
-      # Required to checkout the code
-      contents: read
-      # Required to put a comment into the pull-request
-      pull-requests: write
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: 'Install Node'
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-    - name: 'Install Deps'
-      run: npm install
-    - name: 'Test'
-      run: npx vitest run
-  
+jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     permissions:
       # Required to checkout the code
       contents: read
@@ -58,10 +37,10 @@ jobs:
         path: ./dist
   
   deploy:
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - name: Deploy to GitHub Pages
